# legacy-roboime-intel

./: .gitignore  BUGS.md  CMakeLists.txt  Makefile  README  README.md  RoboIME.sln  TODO.md  make.bat  make_vcproj.bat
clients/cli/: CMakeLists.txt
clients/cli/src/: Intelligence.cpp  Intelligence.h
clients/gui/: CMakeLists.txt
clients/gui/src/: GraphicalIntelligence.cpp  GraphicalIntelligence.h  GraphicalIntelligence.ui  alterstatevars.cpp  alterstatevars.h  itemfield.cpp  itemfield.h  itemrobot.cpp  itemrobot.h  main.cpp  sslfield.cpp  sslfield.h  stageview.cpp
src/: CMakeLists.txt  config.h
src/base/: Ball.cpp  Ball.h  Body.cpp  Body.h  Dribbler.h  Goal.cpp  Goal.h  Kicker.cpp  Kicker.h  Object.cpp  Robot.cpp  Stage.cpp  Stage.h  StageY.h  StateMachine.cpp  StateMachine.h  Team.cpp  Wheel.cpp  Wheel.h
src/clients/graphicalintelligence/: CMakeLists.txt  GraphicalIntelligence.cpp  GraphicalIntelligence.h  GraphicalIntelligence.qrc  GraphicalIntelligence.ui  alterstatevars.ui  graphical.rc  itemfield.cpp  itemfield.h  itemrobot.cpp  itemrobot.h  main.cpp  stageview.cpp  stageview.h  ui_GraphicalIntelligence.h  winmain.h
src/clients/intelligence/: CMakeLists.txt  Intelligence.cpp  Intelligence.h  main.cpp
src/clients/logplayer/: CMakeLists.txt  LogPlayer.cpp  LogPlayer.ui
src/clients/simulation/: CMakeLists.txt  GLWidget.h  SimulationView.cpp  SimulationView.h  SimulationView.qrc  test.xml
src/clients/soccer/: CMakeLists.txt  main3.c
src/communication/: CMakeLists.txt  UdpServer.cpp  UdpServer.h
src/core/filters/: KalmanFilters.h
src/core/plays/: AutoRetaliate.h  CBR2011.cpp  FreeKickThem.cpp  IndirectKick.cpp  MultiController.h  ObeyReferee.cpp  PenaltyThem.cpp  PenaltyUs.cpp  PenaltyUs.h  Play.cpp  StopReferee.cpp  StopReferee.h
src/core/skills/: DriveToBall.cpp  DriveToObject.cpp  DriveToObject.h  FollowAndCover.cpp  GetBall.h  Goto.h  KickTo.cpp  LinearCombMotion.cpp  Move.h  SampledDribble.h  SampledKick.h  Steer.cpp  SteerToPoint.cpp
src/core/tactics/: Attacker.cpp  Blocker.cpp  Blocker.h  Controller2.cpp  Controller2.h  GoalSwitcheroo.cpp  KeyboardController.cpp  KeyboardController.h  Tactic.cpp
src/intelligence/: CMakeLists.txt
src/intelligence/base/: Ball.cpp  Ball.h  Body.h  Component.cpp  Component.h  Goal.cpp  Goal.h  Kicker.cpp  MachineTransition.cpp  Object.cpp  Object.h  Robot.cpp  Robot.h  Stage.cpp  Stage.h  StageX.cpp  StageX.h  StageY.cpp  StageY.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h
src/intelligence/core/filters/: KalmanFilters.cpp
src/intelligence/core/plays/: AutoRetaliate.cpp  AutoRetaliate.h  BGT.cpp  BGT.h  CBR2011.cpp  CBR2011.h  FreeKickThem.cpp  FreeKickThem.h  Halt.cpp  IndirectKick.cpp  IndirectKick.h  MainPlay.h  Minmax.cpp  Minmax.h  Minmax2.cpp  Minmax2.h  MultiController.cpp  MultiController.h  ObeyReferee.cpp  ObeyReferee.h  PenaltyThem.cpp  PenaltyThem.h  PenaltyUs.cpp  PenaltyUs.h  Play.cpp  Play.h  Plays.h  StopReferee.cpp  StopReferee.h
src/intelligence/core/skills/: DriveTo.cpp  DriveTo.h  DriveToBall.cpp  DriveToBall.h  DriveToObject.cpp  DriveToObject.h  FollowAndCover.cpp  FollowAndCover.h  ForceFieldMotion.cpp  GetBall.cpp  GetBall.h  Goto.cpp  Goto.h  GotoAvoid.cpp  GotoAvoid.h  GotoOld.cpp  GotoOld.h  KickTo.cpp  KickTo.h  LinearCombMotion.cpp  LinearCombMotion.h  Loops.cpp  Move.cpp  SampledDribble.cpp  SampledKick.cpp  SampledKick.h  Skill.cpp  Skill.h  Skills.h  Sleep.cpp  Steer.cpp  Steer.h  SteerToPoint.h  Wait.cpp
src/intelligence/core/tactics/: Attacker.cpp  Attacker.h  AttackerMinMax2.cpp  AttackerMinMax2.h  Blocker.cpp  Blocker.h  Controller.cpp  Controller.h  Controller2.cpp  Controller2.h  Defender.cpp  Defender.h  GoalSwitcheroo.cpp  GoalSwitcheroo.h  Goalkeeper.cpp  Goalkeeper.h  GotoTactic.cpp  GotoTactic.h  LinearCombTactic.cpp  Tactic.cpp  Tactic.h  Tactics.h  Zickler43.cpp  Zickler43.h
src/intelligence/interface/: UpdateBall.cpp  UpdateBall.h  UpdateReferee.cpp  UpdateReferee.h  UpdateRobot.cpp  UpdateRobot.h  UpdateStageGeometry.cpp  UpdateStageGeometry.h  Updates.cpp
src/intelligence/interface/base/: Command.cpp  Command.h  Commander.h  UdpServer.cpp  Update.h  Updater.cpp  Updater.h
src/intelligence/interface/commanders/: CommanderGrSim.cpp  CommanderGrSim.h  CommanderSim.cpp  CommanderSim.h  CommanderTx.cpp  CommanderTxOld.cpp  CommanderTxOld.h
src/intelligence/interface/updaters/: UpdaterReferee.cpp  UpdaterSIMi.h  (+3 more)
src/intelligence/prototypes/: Robots.h
src/intelligence/utils/: CXBOXController.h  LinearRegression.cpp  LinearRegression.h  PID.cpp  PID.h  Sampler.h  geomutils.h  mathutils.h
src/interface/: UpdateRobot.h  Updates.h
src/interface/base/: Command.cpp  Commander.cpp  Commander.h  Update.cpp
src/interface/commanders/: CommanderGrSim.cpp  CommanderSim.cpp  CommanderTx.h  CommanderTxOld.cpp  CommanderTxOld.h
src/interface/updaters/: UpdaterReferee.cpp  UpdaterReferee.h
src/prototypes/: Robots.cpp  Robots.h
src/simulation/: CMakeLists.txt  NxAllBalls.cpp  NxAllFields.cpp  NxBall.cpp  NxMath1.cpp  Simulation.cpp  Simulation.h
src/simulation/interface/: UDPMulticastSenderSSLVision.cpp  UDPServerSimInt.cpp  UDPServerSimInt.h
src/simulation/robot/: NxAllRobots.cpp  NxAllRobots.h  NxDribbler.h  NxKicker.cpp  NxKicker.h  NxLinearInterpolationValues.h  NxRobot.cpp  NxRobot.h  NxVehicle.cpp  NxVehicle.h  NxVehicleDesc.h  NxVehicleMotor.h  NxWheel.cpp
src/simulation/samplescommoncode/: Actors.cpp  CMakeLists.txt  DebugRenderer.cpp  common.h
src/soccer/: CMakeLists.txt  defs.h  minimax.c  minimax.h  move_table.c  soccer.c  soccer.h  soccer_action.c  soccer_aux.c  soccer_blue.c  soccer_draw.c  soccer_draw.h  soccer_env.c  soccer_env.h  soccer_red.c  vector.c  vector.h
src/utils/: CXBOXController.cpp  PID.cpp  PID.h  Sampler.cpp  geomutils.h
src/utils/nxustream2/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  actuator_unittest.cc  ball_unittest.cc  battery_unittest.cc  body_unittest.cc  component_unittest.cc  dribbler_unittest.cc  goal_unittest.cc  kicker_unittest.cc  object_unittest.cc  robot_unittest.cc  wheel_unittest.cc
(+242 files in other folders)
